--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <div class="container">
+    <form id="functionForm">
+      <label for="functionName">Name:</label>
+      <input type="text" id="Name" required>
+      <button type="submit">Submit</button>
+      <p id="nameDisplay"></p>
+    </form>
   </div>
   <script src="script.js"></script>
 </body>
